# quadruped

./: .gitignore  setup.py
command_publisher/: CMakeLists.txt  package.xml
command_publisher/src/: action_joint.cpp  position_publisher.cpp
launch/: robot_urdf.launch.py
robot_description/: package.xml  setup.py
robot_description/config/: oneDof_simple_controllers.yaml  oneDof_simple_controllers_sim.yaml  quadruped_controllers.yaml
robot_description/launch/: ign_quadruped.launch.py  ign_simple_robot.launch.py  simple_robot.launch.py
robot_description/urdf/: oneDofBot_description.urdf.xacro  oneDof_ros2_simulated.urdf.xacro  quadruped_description.urdf.xacro  quadruped_main.urdf.xacro  quadruped_simulation.urdf.xacro  robot.urdf  test.urdf.xacro  test_sim.urdf  test_sim.urdf.xacro
robot_hardware/: CMakeLists.txt  package.xml  robot_hardware.xml
robot_hardware/include/robot_hardware/: oneDof_system_simple.hpp
robot_hardware/src/: oneDof_system_simple.cpp
robot_urdf/: joint_publisher.py
urdf/: oneDof_ros2_control.urdf.xacro  robot.urdf  robot.xacro  test.urdf.xacro
